--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,6 +11,7 @@ pages:
   - npm run build
   - rm -rf public
   - mv build public
+  - cp public/index.html public/404.html
   artifacts:
     paths:
     - public # mandatory, other folder won't work
